# openair-rs

./: CHANGELOG.md  Cargo.toml  FORMAT.txt  LICENSE-MIT  README.md
.circleci/: config.yml
example_data/: Switzerland.txt
examples/: parse_file.rs
src/: lib.rs
