[package]
name = "openair"
version = "0.1.2"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
description = "Parser for airspace files in OpenAir format."
keywords = ["airspace", "skytraxx", "variometer", "openair", "parser"]
categories = ["parser-implementations"]
homepage = "https://github.com/dbrgn/openair-rs/"
repository = "https://github.com/dbrgn/openair-rs/"
readme = "README.md"
license = "MIT/Apache-2.0"
include = ["/src/**/*", "/tests/**/*", "/Cargo.toml", "/README.md", "/LICENSE-*"]
edition = "2018"

[badges]
circle-ci = { repository = "dbrgn/openair-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.6"
